combobox/combobox.css
.phui_combobox,
.phui_combobox_autosuggest {
	width: 310px;
	background:none repeat scroll 0 0 #FFFFFF;
	border:1px solid #888888;
	height:20px;
	padding:0 0 0 2px;
	line-height:20px;
	vertical-align:top;
}

.phui_combobox input,
.phui_combobox_autosuggest input {
	background:none repeat scroll 0 0 transparent;
	border:0 none;
	height:14px;
	margin-top:2px;
	outline:0 none;
	vertical-align:top;
	width:100%;
	padding:0;
}

.phui_combobox .container,
.phui_combobox_autosuggest .container {
	margin-right:17px;
}

.phui_combobox .toggle,
.phui_combobox_autosuggest .toggle {
	background:url("images/dropdown.png") center no-repeat;
	width:17px;
	float: right;
	cursor: pointer;
}

.phui_combobox_dropdown {
	padding: 0px;
	border: 1px solid WindowFrame;
	background-color: Window;
	overflow: auto;
}

.phui_combobox_dropdown ul {
	width: 100%;
	list-style-position: outside;
	list-style: none;
	padding: 0;
	margin: 0;	
}

.phui_combobox_dropdown li {
	/*margin: 1px;*/
	/*padding: 3px 0px;*/
	/*cursor: pointer;*/
	/*display: block;*/
	/*border-bottom: 1px solid #cccccc;*/
	width: 100%;
	font: menu;
	font-size: 12px;
	overflow: hidden;
}

.phui_combobox_dropdown .activated {
	background-color: #FFDE58;
}

.phui_combobox_dropdown .activated span {
	font-weight: bold !important;
	font-style: normal !important;
	color: black !important;
}

.phui_combobox_dropdown .selected {
	background-color: orange;
}

.phui_combobox_dropdown .selected span {
	color: white !important;
}

.phui_combobox_dropdown .disabled .text {
	color: #bbbbbb;
}

.phui_combobox_dropdown .selectable {
	display: block;
	width: 100%;
	padding: 3px 0;
	border-bottom: 1px solid #cccccc;
    cursor: pointer;		
}

